# 3D-Matrix

./: CMakeLists.txt  README.md  main.cpp
input_files/: in1.txt  in2.txt
three_dimensional_matrix/: three_dimensional_matrix.cpp  three_dimensional_matrix.h
